# hyperrun

./: .gitignore  .sesskey  Todo.md  colgrep_doc.md  colgrep_py_sdk.md  er import parse_code  main.py  pyproject.toml
hyperrun/: _modidx.py  core.py  ui.py
nbs/: .sesskey  00_core.ipynb  01_ui.ipynb  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml
