[project]
name = "hyperrun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colgrep-parser",
    "fastlucide>=0.0.6",
    "fhdaisy>=0.0.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "lisette>=0.0.42",
    "mistletoe>=1.5.1",
    "nbdev>=3.0.12",
    "python-fasthtml>=0.12.48",
    "tenacity>=9.1.4",
]

[tool.nbdev]

[tool.uv.sources]
colgrep-parser = { git = "https://github.com/lightonai/next-plaid.git", subdirectory = "colgrep/python-sdk" }


[tool.setuptools.packages.find]
include = ["hyperrun*"]
